--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Presentacion.Activity_Edicion_lugar"></activity>
+        <activity android:name=".Presentacion.Vista_Lugar_Activity"></activity>
+        <activity android:name=".Presentacion.Edicion_Lugar_Activity" />
+        <activity android:name=".Presentacion.Activity_Edicion_lugar" />
         <activity
             android:name=".Presentacion.Activity_Acerca_De"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
         <activity android:name=".Presentacion.Preferencias_Activity" />
         <activity
             android:name=".Presentacion.MainActivity"
